scribble-cli/src/test/resources/good/syntax/disamb/imports/pack1/Import02b.scr
module good.syntax.disamb.imports.pack1.Import02b;


import good.syntax.disamb.imports.Import02;


global protocol Bar(role C, role D)
{
	3() from C to D;
	do Foo(C, D);
}


global protocol Foo(role A, role B)
{
	4() from A to B;
	do good.syntax.disamb.imports.Import02.Bar(B, A);
}
