scribble-cli/src/test/resources/bad/syntax/disamb/globals/gprotocoldecl/GProtocolDecl01.scr
module bad.syntax.disamb.globals.gprotocoldecl.GProtocolDecl01;


global protocol Foo(role A, role B, role C)
{

}
